# Raspberry-Pi-Update-OTA-GUI

./: .gitignore  CMakeLists.txt  Main.qml  OtaController.cpp  OtaController.h  README.md  commonapi.ini  commonapi4someip.ini  main.cpp  vsomeip.json
backend/: CMakeLists.txt
backend/src/: OtaBackend.cpp  OtaBackend.h
backend/src-gen/core/v0/filetransfer/example/: FileTransfer.hpp  FileTransferProxy.hpp  FileTransferProxyBase.hpp  FileTransferStub.hpp  FileTransferStubDefault.hpp
backend/src-gen/someip/v0/filetransfer/example/: FileTransferSomeIPCatalog.json  FileTransferSomeIPDeployment.cpp  FileTransferSomeIPDeployment.hpp  FileTransferSomeIPProxy.cpp  FileTransferSomeIPProxy.hpp  FileTransferSomeIPStubAdapter.cpp  FileTransferSomeIPStubAdapter.hpp
cards/: CardChecking.qml  CardDownloadFinished.qml  CardDownloading.qml  CardIdle.qml  CardRequestRefused.qml  CardUpToDate.qml  CardUpdateAvailable.qml
components/: CardShadow.qml  LogEntry.qml  MetricRow.qml  OnlineStatusIndicator.qml  PrimaryButton.qml  StatusTile.qml
